<resources>
    <!--   general  -->
    <string name="app_name">Rockland</string>
    <string name="back">Назад</string>
    <string name="next">ДАЛЕЕ</string>

    <!--   authorization  -->
    <string name="already_have_account">УЖЕ ЕСТЬ АККАУНТ</string>
    <string name="registration">РЕГИСТРАЦИЯ</string>
    <string name="registration_title">Регистрация</string>
    <string name="authorization_title">Авторизация</string>
    <string name="your_name">Ваше имя</string>
    <string name="new_code">ПОЛУЧИТЬ НОВЫЙ КОД (%s)</string>
    <string name="new_code_get">ПОЛУЧИТЬ НОВЫЙ КОД</string>
    <string name="hint_phone">+7 913 716 -13-80</string>
    <string name="enter_your_name_hint">Введите ваше имя</string>
    <string name="hint_code">654-123</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="enter_code_from_sms">Введите код из смс</string>
    <string name="agreement">Используя прилодения вы принимаете Условия и Соглашения и соглашаетесь на получение рекламно-информационных сообщений</string>
    <string name="enter_your_name_prompt">Укажите имя для Вашей идентификации при бронировании</string>

    <!--  main   -->
    <string name="main">Главная</string>
    <string name="news">Новости</string>
    <string name="stock">Акции</string>

    <!--  personal cabinet  -->
    <string name="personal_cabinet">Личный кабинет</string>
    <string name="current_entries">Текущие записи</string>
    <string name="visit_history">История посещений</string>
    <string name="my_score">Мой счет</string>
    <string name="exit">Выход</string>

    <!--  edit profile  -->
    <string name="candidate">Кандидат в мастера спорта</string>
    <string name="master">Мастер спорта</string>
    <string name="first">Первый</string>
    <string name="second">Второй</string>
    <string name="third">Третий</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="none">Не указан</string>
    <string name="my_profile">Мой профиль</string>
    <string name="edit_name_title">Изменение имени</string>
    <string name="edit_phone_title">Изменение телефона</string>
    <string name="first_and_last_name">Имя и фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="sports_category">Спортивный разряд</string>
    <string name="phone">Номер телефона</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="enter_name_hint">Введите имя</string>
    <string name="enter_last_name_hint">Введите фамилию</string>
    <string name="enter_date">Введите дату рождения</string>

    <!--  schedule  -->
    <string name="schedule">Рассписание</string>

    <!--  state displayr  -->
    <string name="some_error">Что-то пошло не так. Повторите еще</string>
    <string name="unknown_error_message">Ошибка сервера, попробуйте позже</string>
    <string name="load_data">Загрузка данных</string>
    <string name="retry_label">Повторить</string>

    <string name="edit_photo">Изменить фото</string>
    <string name="title_edit_gender">Укажите пол</string>
    <string name="title_edit_sport_category">Укажите спортивный разрядл</string>
    <string name="reset">Сброс</string>
    <string name="ready">готово</string>
    <string name="title_cash_account">Мой счет</string>
    <string name="my_cash_residual">%s ₽</string>
    <string name="top_up_account_title">Пополнить счет</string>
    <string name="enter_sum_title">Укажите сумму пополнения</string>
    <string name="enter_sum_hint">Укажите сумму в рублях</string>
    <string name="error_enter_phone_toast">Неправильно введен номер телефона!</string>
    <string name="error_enter_code_toast">Неправильно введен код!</string>
    <string name="error_enter_name_toast">Введите имя!</string>
    <string name="current_entry_title">Текущие записи</string>
    <string name="history_entry_title">История посещений</string>
    <string name="reset_entry_menu">Отменить</string>
    <string name="remind_entry_menu">Напомнить</string>
    <string name="entry_cancel">ОТМЕНА</string>
    <string name="entry_carried">ПРОВЕДЕНА</string>


</resources>