<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarEditName"
        style="@style/TextViewPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:outlineProvider="bounds"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/edit_name_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/size_14"
        android:layout_height="@dimen/size_14"
        android:src="@drawable/ic_exit"
        android:layout_marginRight="@dimen/size_16"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarEditName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_name_title"
        style="@style/TextMinor"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEditName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint"
        android:layout_marginHorizontal="@dimen/size_16"
        android:inputType="textShortMessage|textPersonName|text|textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_title"
        app:maskIconColor="@color/black" />

    <TextView
        android:id="@+id/edit_last_name_title"
        style="@style/TextMinor"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name_hint"
        android:layout_marginHorizontal="@dimen/size_16"
        android:inputType="textShortMessage|textPersonName|text|textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/edit_last_name_title"
        app:maskIconColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        style="@style/ButtonBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_132"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>