<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarEditName"
        style="@style/TextViewPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:outlineProvider="bounds"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/edit_phone_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/size_14"
        android:layout_height="@dimen/size_14"
        android:layout_marginRight="@dimen/size_16"
        android:src="@drawable/ic_exit"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarEditName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_phone_title"
        style="@style/TextMinor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_17"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEditName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16"
        android:hint="@string/hint_phone"
        android:inputType="number"
        android:maxLength="17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_title"
        app:layout_constraintVertical_bias="0.0"
        app:mask="+ * *** ***-**-**"
        app:maskIconColor="@color/black"
        app:notMaskedSymbol="*" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        style="@style/ButtonBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>